# kwarray

./: .coveragerc  .drone.yml  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .rules.yml  .travis.yml  CHANGELOG.md  README.md  README.rst  _autogen_init.py  appveyor.yml  publish.sh  pyproject.toml  pytest.ini  requirements.txt  run_doctests.sh  run_linter.sh  run_tests.py  sanitize.sh  setup.py  whatsnew.txt
.gitlab/: rules.yml
dev/: _bench_is_tensor.py  _bench_typecheck.py  _dev_slider.py  _devcheck_pad.py  bench_atleast_nd.py  bench_dtype_ops.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  count_usage_freq.py  demo_stitcher.py  draw_logo.py  gen_api_for_docs.py  gpg_owner_trust.enc  robust_notes.py  secrets_configuration.sh
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  function_usefulness.rst  index.rst  kwarray.algo_assignment.rst  kwarray.algo_setcover.rst  kwarray.arrayapi.rst  kwarray.dataframe_light.rst  kwarray.distributions.rst  kwarray.fast_rand.rst  kwarray.rst  kwarray.util_averages.rst  kwarray.util_groups.rst  kwarray.util_misc.rst  kwarray.util_numpy.rst  kwarray.util_random.rst  kwarray.util_robust.rst  kwarray.util_slices.rst  kwarray.util_slider.rst  kwarray.util_torch.rst  modules.rst
docs/source/auto/: kwarray.arrayapi.rst  kwarray.dataframe_light.rst  kwarray.distributions.rst  kwarray.fast_rand.rst  kwarray.rst  kwarray.util_averages.rst  kwarray.util_groups.rst  kwarray.util_misc.rst  kwarray.util_random.rst  kwarray.util_robust.rst
kwarray/: __init__.py  algo_assignment.py  algo_assignment.pyi  algo_setcover.py  algo_setcover.pyi  arrayapi.py  arrayapi.pyi  dataframe_light.py  dataframe_light.pyi  distributions.py  distributions.pyi  fast_rand.py  fast_rand.pyi  math_symbols_ascii.py  math_symbols_unicode.py  util_averages.py  util_averages.pyi  util_groups.py  util_groups.pyi  util_misc.py  util_misc.pyi  util_numpy.py  util_numpy.pyi  util_random.py  util_random.pyi  util_robust.py  util_robust.pyi  util_slices.py  util_slices.pyi  util_slider.py  util_slider.pyi  util_torch.py  util_torch.pyi
kwarray/math_symbols/: __init__.py  math_symbols_ascii.py  math_symbols_unicode.py
requirements/: docs.txt  optional.txt  runtime.txt  tests.txt
tests/: test_arrayapi.py  test_averages.py  test_distributions.py  test_import.py  test_normalize.py  test_robust.py  test_slider.py
